5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_842.log
== SUBMITION (2019-03-26 18:29:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero//100
segundo_algarismo= (numero% 100)//100
terceiro_algarismo= ((numero % 100)//10
quarto_algarismo= ((numero % 100)%10)
soma_algarismos=primeiro_algarismo+segundo_algarismo+terceiro_algarismo+quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.129297
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 100)%10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero//100
segundo_algarismo= (numero% 100)//100
terceiro_algarismo= ((numero % 100)//10
quarto_algarismo= ((numero % 100)%10)
soma_algarismos=primeiro_algarismo+segundo_algarismo+terceiro_algarismo+quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.267317
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 100)%10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero//1000
segundo_algarismo= (numero% 100)//100
terceiro_algarismo= ((numero % 100)//10
quarto_algarismo= ((numero % 100)%10)
soma_algarismos=primeiro_algarismo+segundo_algarismo+terceiro_algarismo+quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.16437
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 100)%10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero//1000
segundo_algarismo= (numero % 100)//100
terceiro_algarismo= ((numero % 100)//10
quarto_algarismo= ((numero % 100)%10)
soma_algarismos=primeiro_algarismo+segundo_algarismo+terceiro_algarismo+quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.228219
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 100)%10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:31:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= ((numero % 100) %10)
soma_algarismos=primeiro_algarismo+segundo_algarismo+terceiro_algarismo+quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.182396
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 100) %10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:31:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= ((numero % 100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.174765
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 100) %10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= (((numero % 100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.176815
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= (((numero % 100) %10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= (((numero % 100) %100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.204022
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= (((numero % 100) %100)%10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= (((numero % 100) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismo)							
-- EXECUTION TIME:
0.197298
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= (((numero % 100) %100) %10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:33:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= (((numero % 100) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.207949
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= (((numero % 100) %100) %10)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= (((numero % 100) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 8
    quarto_algarismo= (((numero % 100) %100) %10)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= ((numero % 100) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 8
    quarto_algarismo= ((numero % 100) %100) %10)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= (((numero % 100) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 8
    quarto_algarismo= (((numero % 100) %100) %10)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 100) //10
quarto_algarismo= ((numero % 1000) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 8
    quarto_algarismo= ((numero % 1000) %100) %10)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:34:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= (numero % 100) //10
quarto_algarismo= ((numero % 1000) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.231793
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 8
    quarto_algarismo= ((numero % 1000) %100) %10)
                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:34:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= (numero % 100) //10
quarto_algarismo= ((numero % 1000) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 8
    quarto_algarismo= ((numero % 1000) %100) %10)
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= ((numero % 1000) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 8
    quarto_algarismo= ((numero % 1000) %100) %10)
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.174268
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000) %100) %10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.125642
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000)%100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.169791
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000)%100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000)%100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.192171
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000)%100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000)%100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.137485
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero //1000
segundo_algarismo= (numero % 100) //100
terceiro_algarismo= ((numero % 1000) % 100) //10
quarto_algarismo= (((numero % 1000)%100)%10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) //1 0
quarto_algarismo= (((numero % 1000) % 100) %1 0)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.155393
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 7
    terceiro_algarismo= ((numero % 1000) % 100) //1 0
                                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) //1 0
quarto_algarismo= (((numero % 1000) % 100) %1 0)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- ERROR:
File "XXXX", line 7
    terceiro_algarismo= ((numero % 1000) % 100) //1 0
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.16984
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.132471
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos:"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.151107
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.170965
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.19507
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- EXECUTION TIME:
0.197067
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
19
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero=int(input("digite um numero de 4 algarismos"))
primeiro_algarismo= numero // 1000
segundo_algarismo= (numero % 100) // 100
terceiro_algarismo= ((numero % 1000) % 100) // 10
quarto_algarismo= (((numero % 1000) % 100) % 10)
soma_algarismos=primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)							
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:39:08) 
-- CODE:
nu=int(input("numerode4digitos"))
n1=1
n2=2
n3=3
n4=4
print(n1+n2+n3+n4)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:39:13) 
-- CODE:
nu=int(input("numerode4digitos"))
n1=1
n2=2
n3=3
n4=4
print(n1+n2+n3+n4)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:39:24) 
-- CODE:
nu=int(input("numerode4digitos"))
n1=1
n2=2
n3=3
n4=4
print(n1+n2+n3+n4)
-- EXECUTION TIME:
0.143691
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
10
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:41:15) 
-- CODE:
nu=int(input("numerode4digitos"))
a1=nu//1000
a2=(nu%1000)//100
a3=((nu%1000)%100)//10
a4=(((nu%1000)%100)%10)
soma=a1+a2+a3+4
print(soma)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:41:28) 
-- CODE:
nu=int(input("numerode4digitos"))
a1=nu//1000
a2=(nu%1000)//100
a3=((nu%1000)%100)//10
a4=(((nu%1000)%100)%10)
soma=a1+a2+a3+4
print(soma)
-- EXECUTION TIME:
0.285697
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
21
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:42:22) 
-- CODE:
nu=int(input("numerode4digitos"))
a1=nu//1000
a2=(nu%1000)//100
a3=((nu%1000)%100)//10
a4=(((nu%1000)%100)%10)
soma=a1+a2+a3+4
print(soma)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:42:31) 
-- CODE:
nu=int(input("numerode4digitos"))
a1=nu//1000
a2=(nu%1000)//100
a3=((nu%1000)%100)//10
a4=(((nu%1000)%100)%10)
soma=a1+a2+a3+4
print(soma)
-- EXECUTION TIME:
0.155822
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
21
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:43:17) 
-- CODE:
nu=int(input("numerode4digitos"))
a1=nu//1000
a2=(nu%1000)//100
a3=((nu%1000)%100)//10
a4=(((nu%1000)%100)%10)
soma=a1+a2+a3+a4
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:43:20) 
-- CODE:
nu=int(input("numerode4digitos"))
a1=nu//1000
a2=(nu%1000)//100
a3=((nu%1000)%100)//10
a4=(((nu%1000)%100)%10)
soma=a1+a2+a3+a4
print(soma)
-- EXECUTION TIME:
0.177638
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
